# tkinterDev

./: README.md  pyproject.toml  setup.py
src/tkdev/: __init__.py  __main__.py
src/tkdev/devcore/: __init__.py
src/tkdev/devdemo/: __init__.py
src/tkdev/devresize/: __init__.py
src/tkdev/devwin/: __init__.py
src/tkdev/tkinterDev.egg-info/: PKG-INFO  SOURCES.txt
src/tkinterDev.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: demo-0.py  demo-1.py  demo-10.py  demo-11.py  demo-12.py  demo-13.py  demo-14.py  demo-15.py  demo-16.py  demo-17.py  demo-18.py  demo-19.py  demo-2.py  demo-20.py  demo-21.py  demo-22.py  demo-23.py  demo-24.py  demo-25.py  demo-26.py  demo-3.py  demo-4.py  demo-5.py  demo-6.py  demo-7.py  demo-8.py  demo-9.py  demo.py
tkinterDev.egg-info/: PKG-INFO  SOURCES.txt
